# Zdownload

./: .gitignore  Cargo.toml  README.md  build.rs  com.zzm.Zdownload.json  meson.build  readme.md  readme_CN.md
.cargo/: config.toml
.github/workflows/: rust.yml
data/: com.zzm.Zdownload.desktop.in  com.zzm.Zdownload.gschema.xml  com.zzm.Zdownload.metainfo.xml.in  com.zzm.Zdownload.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: app.slint  application.rs  config.rs  main.rs  meson.build  window.rs  window.ui  zdownload.gresource.xml
