[package]
name = "zdownloadwin"
version = "1.1.2603"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.15.1"
# Handle background download processes when running asynchronously.
tokio = { version = "1.43", features = ["full"] }
# Native file dialog box, supports GNOME/Windows switching
rfd = "0.15" 
dirs = "6.0" # Configuration directory for cross-platform handling
url = "2.5" # Added: For rigorous URL validation
which = "6.0"
# Use rustls-tls to avoid Debian cross-compiling searching for the Windows OpenSSL library
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
sys-locale = "0.3"

[build-dependencies]
slint-build = "1.15.1"